<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/creatorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/creatorTrackTitle"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editCreatorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/creatorAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/creatorTrackAuthor"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editCreatorAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/creatorType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/creatorTrackType"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/creatorTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/creatorThumbnailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/creatorTrackImage"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/creatorThumbnailImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        tools:srcCompat="@tools:sample/avatars" />
    <Button
        android:id="@+id/creatorImageChangeButton"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:text="@string/creatorTrackImageButton" />

    <Button
        android:id="@+id/dialogCreateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/createButton"
        />
    <Button
        android:id="@+id/dialogCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cancelButton"
        />

</LinearLayout>
