<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/speedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dialogSpeed"
        android:textSize="25dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/selectedSpeed"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="x1.0"
            android:textAlignment="center"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/decreaseButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="-"
            android:textSize="20dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/selectedSpeed"
            app:layout_constraintEnd_toStartOf="@+id/selectedSpeed"
            app:layout_constraintTop_toTopOf="@+id/selectedSpeed" />

        <Button
            android:id="@+id/increaseButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:text="+"
            app:layout_constraintBottom_toBottomOf="@+id/selectedSpeed"
            app:layout_constraintStart_toEndOf="@+id/selectedSpeed"
            app:layout_constraintTop_toTopOf="@+id/selectedSpeed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/pauseButton1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialogContinue"
        />
    <Button
        android:id="@+id/pauseButton2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/dialogRestart"
        />
    <Button
        android:id="@+id/pauseButton3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dialogQuit"
        />
</LinearLayout>
